fix: update readme with figma link and update :root css variables

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,10 +1,10 @@
 :root {
   // colors
-  --primary-color: #A7DAC1;
-  --secondary-color: #9BCBB3;
-  --forest-green: #183B3B;
+  --primary-color: #F3F4EC;
+  --secondary-color: #6C6E71;
+  --forest-green: #292D33;
   --charcoal: #202020;
-  --sunset: #FC4D17;
+  --sunset: #D4491B;
   
   // typography
   --main-font: "indivisible", sans-serif;
